--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="wrapper">
             <p class="helpline-title">For Further Inquires :</p>
 
-            <p class="helpline-number">+01 (123) 4567 90</p>
+            <p class="helpline-number">+91 123 4567 90</p>
           </div>
 
         </a>
